<resources>
    <string name="app_name">GoldForest Diet</string>
    <string name="splash_title">Intermittent Fasting</string>
    <string name="splash_bottom_text" translatable="false">Copyright<![CDATA[ⓒ]]> 2019 Gold Forest Team.</string>
    <string name="plan_1_title">Select IF type</string>
    <string name="plan_2_title">Select IF term</string>
    <string name="plan_type_16_8">Fasting at a specific time</string>
    <string name="plan_type_5_2">Fasting on a specific day</string>
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>

    <string name="plan">Plan</string>
    <string name="list">List</string>
    <string name="calendar">Calendar</string>
    <string name="setting">Setting</string>
    <string name="plan_vertical">P\nl\na\nn</string>
    <string name="list_vertical">L\ni\ns\nt</string>
    <string name="calendar_vertical">C\na\nl\ne\nn\nd\na\nr</string>
    <string name="setting_vertical">S\ne\nt\nt\ni\nn\ng</string>

    <string name="time">Time</string>
    <string name="period">Period</string>
    <string name="time_am">AM</string>
    <string name="time_pm">PM</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="fasting_time">Fasting time</string>

    <string name="next">Next</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="set_intermittent_fast_time">Set intermittent fast time</string>
    <string name="plan_term_four_week">4 week</string>
    <string name="plan_term_eight_week">8 week</string>
    <string name="plan_term_no_period">No period</string>
    <string name="plan_term_user_settings">User settings</string>

    <string name="my_plan_title">My diet plan</string>
    <string name="share_my_diet_plan">Share my diet plan</string>
    <string name="invalid_plan">The date you select is not part of Plan.</string>
    <string name="success_details">Success: I succeeded in fasting.</string>
    <string name="failure_details">Failure: I ate...</string>
    <string name="msg_input_fasting_result">Did you succeed in singles?\nPlease select the fasting result below.</string>
    <string name="save">Save</string>
    <string name="success_fasting">Success Fasting!</string>
    <string name="failed_fasting">Failed Fasting...</string>
    <string name="empty">Empty</string>
    <string name="january">Jan</string>
    <string name="february">Feb</string>
    <string name="march">Mar</string>
    <string name="april">Apr</string>
    <string name="may">May</string>
    <string name="june">Jun</string>
    <string name="july">Jul</string>
    <string name="august">Aug</string>
    <string name="september">Sep</string>
    <string name="october">Oct</string>
    <string name="november">Nov</string>
    <string name="december">Dec</string>
</resources>
