<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".view.CalendarFragment">

    <TextView
            android:id="@+id/tvMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            tools:text="2019 May"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/tvSun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:text="@string/sunday"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintTop_toBottomOf="@+id/tvMonth"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvMon"/>

    <TextView
            android:id="@+id/tvMon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/monday"
            app:layout_constraintTop_toTopOf="@+id/tvSun"
            app:layout_constraintStart_toEndOf="@+id/tvSun"
            app:layout_constraintEnd_toStartOf="@+id/tvTue"/>

    <TextView
            android:id="@+id/tvTue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tuesday"
            app:layout_constraintTop_toTopOf="@+id/tvSun"
            app:layout_constraintStart_toEndOf="@+id/tvMon"
            app:layout_constraintEnd_toStartOf="@+id/tvWed"/>

    <TextView
            android:id="@+id/tvWed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/wednesday"
            app:layout_constraintTop_toTopOf="@+id/tvSun"
            app:layout_constraintStart_toEndOf="@+id/tvTue"
            app:layout_constraintEnd_toStartOf="@+id/tvThu"/>

    <TextView
            android:id="@+id/tvThu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/thursday"
            app:layout_constraintTop_toTopOf="@+id/tvSun"
            app:layout_constraintStart_toEndOf="@+id/tvWed"
            app:layout_constraintEnd_toStartOf="@+id/tvFri"/>

    <TextView
            android:id="@+id/tvFri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/friday"
            app:layout_constraintTop_toTopOf="@+id/tvSun"
            app:layout_constraintStart_toEndOf="@+id/tvThu"
            app:layout_constraintEnd_toStartOf="@+id/tvSat"/>

    <TextView
            android:id="@+id/tvSat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:text="@string/saturday"
            app:layout_constraintTop_toTopOf="@+id/tvSun"
            app:layout_constraintStart_toEndOf="@+id/tvFri"
            app:layout_constraintEnd_toEndOf="parent"/>

    <GridView
            android:id="@+id/gvCalendar"
            android:background="#e5e5e5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:numColumns="7"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/tvSun"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>