<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools" android:id="@+id/nav_graph"
            app:startDestination="@id/splashFragment">

    <fragment android:id="@+id/splashFragment" android:name="com.goldforest.capdiet.view.SplashFragment"
              android:label="fragment_splash" tools:layout="@layout/fragment_splash">
        <action android:id="@+id/action_splashFragment_to_mainFragment" app:destination="@id/mainFragment"
                app:popUpTo="@id/splashFragment"
                app:popUpToInclusive="true"/>
    </fragment>
    <fragment android:id="@+id/mainFragment" android:name="com.goldforest.capdiet.view.MainFragment"
              android:label="@string/app_name" tools:layout="@layout/fragment_main">
        <action android:id="@+id/action_mainFragment_to_planFragment" app:destination="@id/planFragment"
                app:enterAnim="@anim/slide_from_left"
                app:popExitAnim="@anim/slide_to_left"/>
        <action android:id="@+id/action_mainFragment_to_calendarFragment" app:destination="@id/calendarFragment"
                app:enterAnim="@anim/slide_from_left"
                app:popExitAnim="@anim/slide_to_left"/>
    </fragment>
    <fragment android:id="@+id/planFragment" android:name="com.goldforest.capdiet.view.plan.PlanMainFragment"
              android:label="@string/plan" tools:layout="@layout/fragment_plan">
        <action android:id="@+id/action_planFragment_to_planTermFragment" app:destination="@id/planTermFragment"/>
    </fragment>
    <fragment android:id="@+id/listFragment" android:name="com.goldforest.capdiet.view.ListFragment"
              android:label="@string/list" tools:layout="@layout/fragment_list"/>
    <fragment android:id="@+id/settingsFragment" android:name="com.goldforest.capdiet.view.SettingsFragment"
              android:label="@string/setting" tools:layout="@layout/fragment_settings"/>
    <fragment android:id="@+id/calendarFragment" android:name="com.goldforest.capdiet.view.calendar.CalendarMainFragment"
              android:label="@string/calendar" tools:layout="@layout/fragment_calendar_main"/><action android:id="@+id/action_global_mainFragment" app:destination="@id/mainFragment"/>
    <fragment android:id="@+id/planTermFragment" android:name="com.goldforest.capdiet.view.plan.PlanTermFragment"
              android:label="PlanTermFragment">
        <action android:id="@+id/action_planTermFragment_to_planNotificationFragment"
                app:destination="@id/planNotificationFragment"/>
    </fragment>
    <fragment android:id="@+id/planNotificationFragment"
              android:name="com.goldforest.capdiet.view.plan.PlanNotificationFragment"
              android:label="PlanNotificationFragment"/>
</navigation>