<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="com.goldforest.capdiet.viewmodel.PlanViewModel" />
    </data>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.PlanFragment"
            android:background="@android:color/white">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                    android:id="@+id/tvPlanTypeTile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/plan_1_title"
                    android:layout_margin="10dp"
                    app:layout_constraintTop_toTopOf="parent"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@id/tvPlanTypeTile">
                <RadioButton
                    android:id="@+id/rbPlan1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{vm.isChecked() == 0 ? true : false}"
                    android:text="@string/plan_type_16_8"
                    android:onClick="@{vm.planClickListener}"/>

                <RadioButton
                    android:id="@+id/rbPlan2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{vm.isChecked() == 1 ? true : false}"
                    android:text="@string/plan_type_5_2"
                    android:onClick="@{vm.planClickListener}" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>